Issue 2: Trying to center align button in card footer

--- a/src/components/projects/Project.module.scss
+++ b/src/components/projects/Project.module.scss
@@ -73,13 +73,21 @@
 
   .card__footer {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center;  
+    align-items: center;      
     padding: 10px;
-    width: 100%; 
+    width: 100%;
     text-align: center;
   }
-
+  
+  .card__footer a.button {
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+    width: max-content; 
+    margin: 0 auto;  
+  }
+  
   // .card__footer .button {
   //   display: block;  
   //   margin: 0 auto;  
